[gd_scene load_steps=5 format=3 uid="uid://sm68adercw2r"]

[ext_resource type="Script" path="res://scripts/Summons/summoning_circle.gd" id="1_e1c3y"]
[ext_resource type="Texture2D" uid="uid://cwve5r6qcewex" path="res://assets/summoning_circle_FINAL.png" id="2_q0irj"]
[ext_resource type="Script" path="res://scripts/Utils/Actionable.gd" id="3_4hv1o"]

[sub_resource type="CircleShape2D" id="CircleShape2D_w0bbk"]
radius = 46.0

[node name="SummoningCircle" type="Node2D"]
script = ExtResource("1_e1c3y")

[node name="CircleSprite" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_q0irj")

[node name="Actionable" type="Area2D" parent="."]
collision_layer = 32
script = ExtResource("3_4hv1o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Actionable"]
position = Vector2(1, 2)
shape = SubResource("CircleShape2D_w0bbk")

[connection signal="actioned" from="Actionable" to="." method="_on_actionable_actioned"]
[connection signal="body_entered" from="Actionable" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Actionable" to="." method="_on_area_2d_body_exited"]
